--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.2.1",
-    "discord.js": "^11.4.2",
+    "bufferutil": "^4.0.1",
+    "discord.js": "^11.5.1",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.6",
     "vue": "^2.5.22",
     "vue-router": "^3.0.2"
   }
