--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "discord.js": "^11.5.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.15",
     "popper": "^1.0.1",
-    "popper.js": "^1.14.6",
-    "vue": "^2.5.22",
-    "vue-router": "^3.0.2"
+    "popper.js": "^1.14.6"
   }
 }
