Adding package.lock

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "discord-server-bot-v1"
+    "url": "git@github.com:Pckool/Custom-Discord-Bot.git"
   },
   "keywords": [
     "discord",
