--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "defton_server_bot",
   "version": "1.0.4",
   "description": "Special Discord Server bot developed by TDefton.",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "ts-node src/index.ts",
+    "docker:build": "docker build -t devdefton/cometbot:latest .",
+    "docker:run": "docker run  -p 8888:8888 -d -t devdefton/cometbot"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,21 @@
   "license": "ISC",
   "dependencies": {
     "bufferutil": "^4.0.1",
-    "discord.js": "^11.6.3",
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "popper.js": "^1.16.1"
+    "node-emoji": "^1.10.0",
+    "popper.js": "^1.16.1",
+    "redis": "^3.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.28",
+    "@types/node-emoji": "^1.8.1",
+    "@types/redis": "^2.8.28"
   }
 }
