--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3'
 services:
   redis:
     image: redis
-
+    restart: always
   cometbot:
     build: .
     env_file: "./.env"
     depends_on:
       - redis
+    restart: always
