--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "docker:build": "docker build -t devdefton/cometbot:latest .",
-    "docker:run": "docker run  -p 8888:8888 -d -t devdefton/cometbot"
+    "docker:run": "docker run  -p 8888:8888 -d -t devdefton/cometbot",
+    "launchdb": "docker run -d -p 3306:3306 -e MYSQL_ROOT_PASSWORD=Comet2021 --name comet_db mariadb"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,9 @@
     "node-emoji": "^1.10.0",
     "popper.js": "^1.16.1",
     "redis": "^3.0.2",
+    "sqlite3": "^5.0.2",
     "ts-node": "^9.1.1",
+    "twitter-api-client": "^1.3.1",
     "typescript": "^4.1.5"
   },
   "devDependencies": {
@@ -36,6 +39,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.28",
     "@types/node-emoji": "^1.8.1",
-    "@types/redis": "^2.8.28"
+    "@types/redis": "^2.8.28",
+    "@types/sqlite3": "^3.1.7"
   }
 }
