--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node src/index.ts",
     "docker:build": "docker build -t devdefton/cometbot:latest .",
     "docker:run": "docker run  -p 8888:8888 -d -t devdefton/cometbot",
-    "launchdb": "docker run -d -p 3306:3306 -e MYSQL_ROOT_PASSWORD=Comet2021 --name comet_db mariadb"
+    "launchdb": "docker run -d -p 3306:3306 -e MYSQL_ROOT_PASSWORD=Comet2021 --name comet_db mariadb",
+    "deploy": "docker build -t devdefton/cometbot:latest . && docker-compose up -d"
   },
   "repository": {
     "type": "git",
